# ServerlessLLM

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.rocm  Dockerfile.worker  LICENSE  MANIFEST.in  PR_DRAFT.md  README.md  README_IMPROVEMENTS_TODO.md  READY_TO_COMMIT.md  benchmark_results.json  docker-build.sh  docker-compose.yml  docker_launch.txt  entrypoint.sh  event.json  format.sh  notes.md  package-lock.json  pyproject.toml  requirements-lint.txt  requirements-test.txt  requirements-vllm.txt  requirements-worker.txt  requirements.txt  setup.cfg  setup.py  sglang_example_config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend.yaml  (+17 more)
benchmarks/: BENCHMARK.md  DOCKER_TEST.md  README.md  benchmark_cached_load.sh  benchmark_random_load.sh  benchmark_utils.py  docker-run.sh  download_models.py  fio-config.ini  generate_report.py  gpu_cleanup.py  plot.py  requirements.txt  run-benchmark.sh  server-specs.md  test_loading.py
blogs/: README.md
configs/: .linkcheck.json  .spellcheck.yml  .wordlist.txt
demo/: rag.py
docs/: README.md  blogs  getting_started.md  intro.md
examples/: README.md
k8s/: .gitignore  BUILD_AND_DEPLOY.md  EIDF_SETUP.md  NVME_SETUP.md  QUEUE_MONITORING.md  QUICK_DEPLOY.md  README.md  benchmark-configmap.yaml  benchmark-job-eidf.yaml  benchmark-job.yaml  benchmark-scripts-configmap.yaml  deploy-benchmark.sh  monitor-benchmark.sh  monitor-queue.sh  nvme-detect-configmap.yaml  sllm-store-job-nvme.yaml  sllm-store-job.yaml  storage-pvc.yaml
serverless_llm/store/: CMakeLists.txt  Dockerfile.builder  Dockerfile.rocm  MANIFEST.in  README.md  build.sh  check_patch.sh  cpp_build.sh  patch.sh  pyproject.toml  remove_patch.sh  requirements-build-rocm.txt  requirements-build.txt  requirements.txt  setup.py
serverless_llm/store/cmake/: hipify.py  hipify_cli.py
serverless_llm/store/csrc/: server.cpp
serverless_llm/store/csrc/checkpoint/: aligned_buffer.cpp  aligned_buffer.h  checkpoint.cpp  checkpoint.cu  checkpoint.h  checkpoint_py.cpp  progress_bar.h  tensor_writer.cpp  tensor_writer.h
serverless_llm/store/csrc/sllm_store/: binary_utils.cpp  binary_utils.h  checkpoint_store.cpp  checkpoint_store.h  concurrent_queue.h  concurrent_vector.h  cuda_memory.cpp  cuda_memory.h  cuda_memory_pool.cpp  cuda_memory_pool.h  error_handling.h  gpu_replica.cpp  gpu_replica.h  memory_state.cpp  memory_state.h  model.cpp  model.h  pinned_memory.cpp  pinned_memory.h  pinned_memory_pool.cpp  pinned_memory_pool.h  types_and_defs.h
serverless_llm/store/proto/: storage.proto
serverless_llm/store/serverless_llm_store/: __init__.py  client.py  device_map_utils.py  logger.py  sllm_store.py  torch.py  transformers.py  utils.py  vllm.py
serverless_llm/store/serverless_llm_store/server/: server.py
serverless_llm/store/tests/: CMakeLists.txt  test_load_to_host.cpp  test_save_model.py
serverless_llm/store/tests/cpp/: test_load_to_host.cpp  test_pinned_memory.cpp
serverless_llm/store/tests/python/: test_save_model.py  test_save_vllm_model.py
serverless_llm/store/vllm_patch/: patch.sh  remove_patch.sh  sllm_load.patch
sllm/: README.md  __init__.py  _cli_utils.py  api_gateway.py  app_lib.py  autoscaler.py  clic.py  command_builder.py  controller.py  database.py  default_config.json  default_ft_config.json  dispatcher.py  fine_tuning_instance.py  fine_tuning_job_store.py  hardware_info_collector.py  inference_instance.py  kv_store.py  lb_manager.py  lb_registry.py  load_balancer.py  logger.py  model_downloader.py  model_manager.py  prometheus.py  pylet_client.py  reconciler.py  router.py  storage_manager.py  store_manager.py  utils.py  worker_manager.py
sllm_store/: .gitignore  CMakeLists.txt  Dockerfile.builder  Dockerfile.builder.rocm  Dockerfile.k8s  Dockerfile.rocm  MANIFEST.in  README.md  cpp_build.sh  entrypoint.sh  pyproject.toml  requirements-build-rocm.txt  requirements-build.txt  requirements-vllm.txt  requirements.txt  setup.cfg  setup.py  using_existing_torch.py
sllm_store/cmake/: hipify.py  utils.cmake
sllm_store/csrc/: server.cpp
sllm_store/csrc/checkpoint/: aligned_buffer.cpp  checkpoint.cpp  checkpoint.cu  checkpoint.h  checkpoint_py.cpp  progress_bar.h  tensor_writer.h
sllm_store/csrc/sllm_store/: checkpoint_store.cpp  checkpoint_store.cu  checkpoint_store.h  checkpoint_store_py.cpp  concurrent_vector.h  cuda_memory.cpp  cuda_memory.cu  cuda_memory_pool.cpp  cuda_memory_pool.h  error_handling.h  gpu_replica.cpp  gpu_replica.cu  memory_allocators.h  memory_state.cpp  memory_state.h  model.cpp  model.cu  model.h  pinned_memory.cpp  pinned_memory.h  pinned_memory_pool.cpp  pinned_memory_pool.cu  pinned_memory_pool.h  shared_memory.cpp  shared_memory.h  types_and_defs.h
sllm_store/examples/: load_lora_adapter.py  load_quantized_transformers_model.py  load_sglang.py  load_sglang_model.py  load_transformers_model.py  load_vllm_model.py  load_vlm_model.py  save_lora_adapter.py  save_sglang_model.py  save_transformers_model.py  save_vllm_model.py  save_vlm_model.py
sllm_store/examples/sllm_store/: load_transformers_model.py  load_vllm_model.py  save_transformers_model.py  save_vllm_model.py
sllm_store/proto/: storage.proto
sllm_store/sglang_patch/: checkPatch.sh  patchsg.sh  remove.sh  sllmLoad.patch
sllm_store/sllm_store/: cli.py  client.py  device_map_utils.py  logger.py  server.py  torch.py  transformers.py  utils.py
sllm_store/sllm_store/proto/: __init__.py  storage.proto  storage_pb2.py  storage_pb2_grpc.py
sllm_store/sllm_store/server/: server.py
sllm_store/tests/cpp/: CMakeLists.txt  test_load_to_host.cpp  test_pinned_memory.cpp  test_shared_mem.cpp  test_templated_memory_pool.cpp
sllm_store/tests/python/: test_cli.py  test_save_lora.py  test_save_model.py  test_save_vllm_model.py  test_utils.py
sllm_store/vllm_patch/: check_patch.sh  patch.sh  remove_patch.sh  sllm_load.patch  sllm_load2.patch
test/: qtest1.py  qtest2.py  qtest3.py  request.json  test.py
tests/: conftest.py  utils.py  vllm_backend_test.py
(+324 files in other folders)
