[build-system]
requires = [
    "setuptools",
    "wheel",
    "cmake>=3.20",
    "ninja",
    "grpcio==1.49.1",
    "grpcio-tools==1.49.1",
]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 80
exclude = []

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
]
ignore = []


[tool.isort]
use_parentheses = true
skip_gitignore = true

[tool.codespell]
skip = 'build,*.egg-info,images'
quiet-level = 1